Strategy trocado para o Service